--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,6 +3,6 @@ server {
 
     location / {
         include uwsgi_params;
-        uwsgi_pass temperature-api:8080;
+        uwsgi_pass fever-api:8080;
     }
 }
