fix: :bug: fixes build using postgresql

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,12 +2,21 @@ FROM python:3.9-alpine
 RUN apk add --virtual .build-dependencies \
             --no-cache \
             python3-dev \
-            build-base \
+            postgresql-libs \ 
+            musl-dev \
             linux-headers \
             pcre-dev
+
 RUN apk add --no-cache pcre
+
 WORKDIR /app
 COPY . /app
+
+RUN apk --no-cache add build-base
+RUN apk --no-cache add postgresql-dev
+RUN python3 -m pip install psycopg2
+
 RUN pip install -r /app/req.txt
 RUN apk del .build-dependencies && rm -rf /var/cache/apk/*
+
 CMD ["uwsgi", "/app/wsgi.ini"]
