chore: :sparkles: adds easier dev configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build: ./api
     container_name: fever-api
     restart: always
+    environment:
+      - mode=prod
     expose:
       - 8080
 
